codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_includes_thread_usage_items.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 100)"
---
                                                                                                    
  Configure Status Line                                                                             
  Select which items to display in the status line.                                                 
                                                                                                    
  Type to search                                                                                    
                                                                                                    
› [x] Use theme colors       Apply colors from the active /theme                                    
  ───────────────────────                                                                           
  [x] thread-credits         Estimated current-thread credits (Enterprise workspaces only; omitted …
  [x] estimated-thread-cost  Estimated current-thread cost in USD (Enterprise workspaces only; omit…
  [x] cache-hit-rate         Cached share of the latest request's input tokens (omitted until avail…
  [ ] model                  Current model name                                                     
  [ ] model-with-reasoning   Current model name with reasoning level                                
  [ ] reasoning              Current reasoning level                                                
↓                                                                                                   
  5.2 credits·~$1.82·Cch89.6%                                                                       
  space toggle · ←/→ reorder · enter save · esc cancel
